Sat Sep 08 02:06:44 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c: use pclose on popen'ed FILE *

Thu Sep 06 20:17:31 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: handle error from fork when daemonizing well

Thu Sep 06 15:55:20 2001  George Lebl <jirka@5z.com>

	* gui/gdmwm.c: "fix" for the toolbar deadlock problem.  apparently
	  gnome-dock code is pretty braindead and uses the bulldog technique
	  for grabbing the pointer, grab in a tight loop until we succeed.
	  But the it will fail until the main loop is hit so a deadlock
	  results.  Fix this by defining that function again in gdmwm with
	  a more "maybe" correct semantics.

Tue Sep  4 18:52:10 2001  Trevor Curtis <tcurtis@somaradio.ca>
	* docs/gdmconfig/C/figures/GDM_xserv_setup.png,GDM_xdmcp.png: 
	  Updated the above screenshots to reflect recent changes.

Wed Sep  5 03:18:43 2001  Abel Cheung <maddog@linux.org.hk>

	* config/locale.alias: Rename zh_TW.Big5 to zh_TW .

Mon Sep 03 00:38:23 2001  George Lebl <jirka@5z.com>

	* gui/gdmflexiserver.c:  When we run a new flexi server lock the
	  current screen with xscreensaver.  We need a nicer locker though
	  and one that can also run gdmflexiserver.  And this even for normal
	  gnome locking.  It would be nice if xscreensaver allowed a custom
	  locker dialog.

Mon Sep  3 01:34:17 EDT 2001 Trevor Curtis <tcurtis@somaradio.ca>
	* gdmconfig.sgml: updated the gdmconfig document to reflect
	  the changes in the gui, gdmconfig.

Sun Sep 02 16:44:28 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h, daemon/xdmcp.c: Implement a GOT_MANAGED_FORWARD
	  opcode.  Also send MANAGED_FORWARD 3 times (1.5 sec spaced apart)
	  or until we get a GOT_MANAGED_FORWARD.  This is a compatible
	  change to the gdm xdmcp protocol so version wasn't raised.

Sat Sep 01 14:53:22 2001  George Lebl <jirka@5z.com>

	* AUTHORS, docs/gdmconfig/C/gdmconfig.sgml:  Updated trevors email

Sat Sep 01 07:00:52 2001  George Lebl <jirka@5z.com>
